--- a/client/layout.html
+++ b/client/layout.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Default Authentication</title>
+	<title>Insight | eXomodal</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
